--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,81 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  font-family: "Poppins";
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+label{
+  margin-bottom: 1rem;
+}
+
+#name{
+  width: 350px;
+  font-size: 1rem;
+  padding: .5rem;
+  outline: none;
+  border: 1px solid #333;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  font-family: "Poppins";
+}
+
+#review{
+  margin-bottom: 2rem;
+  width: 500px;
+  height: 200px;
+  border-radius: 5px;
+  border: 1px solid #333;
+  resize: none;
+  padding: .5rem;
+  font-size: 1rem;
+  font-family: "Poppins";
+  outline: none;
+}
+
+#review:focus, #name:focus{
+  border: 1px solid rgb(15, 86, 219);
+  box-shadow: 0px 0px 15px rgba(15, 86, 219, 0.35);
+}
+
+.form button{
+  cursor: pointer;
+  border: 0;
+  width: 250px;
+  height: 40px;
+  font-family: "Poppins";
+  font-size: 1rem;
+  border-radius: 5px;
+  background-color: rgb(15, 86, 219);
+  color: white;
+  transition: .2s ease;
+}
+
+.form button:hover{
+  background-color: rgb(1, 57, 161);
+}
+
+.card-wrapper{
+  border-top: 1px solid #333333b6;
+  margin-top: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  padding: .5rem;
+  border-radius: 5px;
+  max-width: 800px;
+  width: 100%;
+  margin: 2rem 0;
+  border: 1px solid rgba(51, 51, 51, 0.6);
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.4);
 }
